# alpine-lambda-trade

./: .coverage  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  insert_mock_data.py  pyproject.toml
.agents/rules/: alpine-project-rules.md
infra/: .terraform.tfstate.lock.info  iam_snowflake.tf  kinesis.tf  lambda.tf  providers.tf  s3.tf  snowflake.tf  sqs.tf
src/batch_layer/: .user.yml  dbt_project.yml  profiles.yml
src/batch_layer/models/: schema.yml
src/batch_layer/models/serving/: vw_realtime_portfolio.sql
src/batch_layer/models/silver/: slv_trades.sql
src/batch_layer/models/staging/: _sources.yml  stg_trades.sql
src/producer/: config.py  exchange_stream.py  kinesis_client.py  main.py  models.py  s3_buffer.py  sqs_client.py
src/serving_layer/: dashboard.py  requirements.txt
src/speed_layer/: app.py  requirements.txt
tests/producer/: conftest.py  test_buffer.py  test_sqs.py  test_stream.py
