[project]
name = "alpine-lambda-trade-producer"
version = "0.1.0"
description = "Producer logic for Alpine Lambda Trade"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "ccxt>=4.2.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic-settings>=2.2.0",
    "pydantic>=2.6.0",
    "dbt-core>=1.7.0",
    "dbt-snowflake>=1.7.0",
]

[dependency-groups]
dev = [
    "moto[kinesis,s3]>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
