[project]
name = "alpine-lambda-trade"
version = "0.1.0"
description = "Alpine Lambda Trade Data Pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.34.0",
    "urllib3<3"
]

[project.optional-dependencies]
producer = [
    "ccxt>=4.2.0",
    "pydantic-settings>=2.2.0",
    "pydantic>=2.6.0",
]
serving = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "altair>=5.2.0",
    "snowflake-connector-python[pandas]==3.8.1"
]
batch = [
    "dbt-core>=1.7.0",
    "dbt-snowflake>=1.7.0"
]

[dependency-groups]
speed = [
    "snowflake-connector-python==3.8.1"
]
dev = [
    "moto[sqs,s3]>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
